--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,7 +1,4 @@
-<h1>Calendar#index</h1>
-<p>Find me in app/views/calendar/index.html.erb</p>
-
-<h1>Per</h1>
+<h1>Dirty Laundry</h1>
 
 <%= month_calendar do |date| %>
   <%= date %>
