add method to extract data from api and render it in the view

--- a/app/views/booking/index.html.erb
+++ b/app/views/booking/index.html.erb
@@ -3,3 +3,8 @@
 <%= month_calendar do |date| %>
   <%= date.day %>
 <% end %>
+
+<% @forecasts.each do |forecast| %>
+  <%= forecast['wind']['speed']%>
+  <%= forecast['main']['temp']%>
+<% end %>
