install devise, generates user model, updates basic steps and feture file to passing tests

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,7 +6,7 @@
     <%= date %>
     <% @laundries.each do |room| %>
         <% room.schedule.occurrences_between(date.midnight, date.midnight + 24.hours).each do |slot| %>
-            <div><%= link_to slot.to_formatted_s(:time), bookings_path, method: "post", data: {confirm: "Would you like to book this timeslot?"} %></div>
+            <div><%= link_to slot.to_formatted_s(:time), bookings_path(slot: slot), method: "post", data: {confirm: "Would you like to book this timeslot?"} %></div>
         <% end %>
     <% end %>
 </div>
