added basic styling and added div class to weather

--- a/app/views/booking/index.html.erb
+++ b/app/views/booking/index.html.erb
@@ -5,7 +5,9 @@
 <% end %>
 
 <% @forecasts.each do |forecast| %>
+  <div class="weather-forecast">
   <%= forecast['weather'][0]['description'] %>
   <%= convert_to_celcius(forecast['main']['temp']).round %>
   <%= convert_to_weekday(forecast['dt_txt']) %>
+  </div>
 <% end %>
