--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   <body>
     <p><%= notice %></p>
     <p><%= alert %></p>
-    <%= yield %>
+    <% if user_signed_in? %>
+      <%= link_to "Logged in as: #{current_user_email}", root_path  %>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete  %>
+      <% else %>
+        <%= link_to "Login with Facebook", '#'  %>
+      <% end %>
+      <%= yield %>
   </body>
 </html>
