--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= link_to "Logged in as: #{current_user_email}", root_path  %>
       <%= link_to "Sign out", destroy_user_session_path, method: :delete  %>
       <% else %>
-        <%= link_to "Login with Facebook", '#'  %>
+        <%= link_to "Login with Facebook", user_facebook_omniauth_authorize_path  %>
       <% end %>
       <%= yield %>
   </body>
