--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <p><%= notice %></p>
     <p><%= alert %></p>
     <% if user_signed_in? %>
-      <%= link_to "Logged in as: #{current_user_email}", root_path  %>
+      <%= link_to "Logged in as: #{current_user}", root_path  %>
       <%= link_to "Sign out", destroy_user_session_path, method: :delete  %>
       <% else %>
         <%= link_to "Login with Facebook", user_facebook_omniauth_authorize_path  %>
