--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -12,3 +12,10 @@
         <% end %>
     </div>
 <% end %>
+<% @forecasts.each do |forecast| %>
+  <div class="weather-forecast">
+  <%= forecast['weather'][0]['description'] %>
+  <%= convert_to_celcius(forecast['main']['temp']).round %>
+  <%= convert_to_weekday(forecast['dt_txt']) %>
+  </div>
+<% end %>
